--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="jspsych/dist/plugin-html-button-response.js"></script>
   <script src="jspsych/dist/plugin-instructions.js"></script>
   <script src="jspsych/dist/xlsx.full.min.js"></script>
+  <script src="jspsych/dist/plugin-survey-html-form.js"></script>
 
   <style>
    
